# learnora

./: .gitignore  API_FETCHER_GUIDE.md  AUDIT_QUICK_REFERENCE.md  CHANGELOG.md  CLAUDE.md  CONTENT_DISCOVERY_API_QUICK_REFERENCE.md  CONTENT_INTERACTION_KG_INTEGRATION.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  EVOLVING_PREFERENCES_GUIDE.md  FEATURES.md  INTERACTION_TRACKING_GUIDE.md  LEARNING_PATH_AUTH_QUICKSTART.md  PRIORITY_2_BROWSER_TEST_GUIDE.py  PRIORITY_2_IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  README.md  SYSTEM_ALIGNMENT_ANALYSIS.md  TESTING_GUIDE.md  add_python314_to_path.ps1  apply_dark_mode_updates.ps1  docker-compose.yml  example_custom_keywords_api.py  fix_mcp_path.ps1  fix_mcp_simple.ps1  simple_test.py
core-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  seed_knowledge_graph.py  test
core-service/app/: config.py  main.py
core-service/app/database/: __init__.py  base.py  connection.py  session.py
core-service/app/features/agent/: __init__.py  graph.py  router.py  schemas.py  service.py  type.py
core-service/app/features/assessment/: __init__.py  dke.py  integration.py  models.py  router.py  schemas.py
core-service/app/features/concept/: __init__.py  kg.py  ontology.py  router.py  service.py  service_enhanced.py  storage.py
core-service/app/kg/: __init__.py  base.py  config.py  storage.py  utils.py
core-service/app/util/: kg_util.py  string_util.py
core-service/data/: concepts_metadata.json  user_knowledge_metadata.json
core-service/data/graph/: ontology.ttl
core-service/migrations/: add_user_id_to_learning_path.sql  apply_user_id_migration.sql  migrate_learning_path_user_id.py
core-service/migrations/versions/: add_learning_path_progress.py
core-service/tests/: test_kg_base.py  test_kg_config.py  test_kg_ontologies.py  test_kg_services.py  test_kg_storage.py  test_sample.py
(+290 files in other folders)
